--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/so2w/3Dmarketplace.git"
+    "url": "git+https://github.com/micompa/3Dmarketplace.git"
   },
-  "author": "Diego y Julian",
+  "author": "Diego - Julian",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/so2w/3Dmarketplace/issues"
+    "url": "https://github.com/micompa/3Dmarketplace/issues"
   },
-  "homepage": "https://github.com/so2w/3Dmarketplace#readme",
+  "homepage": "https://github.com/micompa/3Dmarketplace#readme",
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
