ultimos cambios antes del deploy

--- a/back/config/config.env
+++ b/back/config/config.env
@@ -1,12 +1,12 @@
 PORT=4000
 NODE_ENV=DEVELOPMENT
 
-DB_LOCAL_URI = mongodb://localhost:27017/vetyshop
-DB_URI= mongodb+srv://natali:udea2022@vetyshop.zl8kzjh.mongodb.net/vetyshop
+DB_LOCAL_URI = mongodb://localhost:27017/3dmarket
+DB_URI= mongodb+srv://3dmarket:3.1416.asd*@3dmarket.rcakvwi.mongodb.net/?retryWrites=true&w=majority
 JWT_SECRET=IKBGLKNROGIAY8R4Y3IUG8IGIBHO7YHIH
 JWT_TIEMPO_EXPIRACION= 1d
 COOKIE_EXPIRES_TIME= 1
 
-CLOUDINARY_CLOUD_NAME=vetyshopstore
-CLOUDINARY_API_KEY=836895197626568
-CLOUDINARY_API_SECRET=KQTBvhfr0CBd3WzchD6K5b1GR9Q
+CLOUDINARY_CLOUD_NAME=dm6vvyhnd
+CLOUDINARY_API_KEY=463768835473676
+CLOUDINARY_API_SECRET=-97qxwvfr4T_PJyW2Qum2tjEecA
