--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node back/server.js",
-    "dev": "SET NODE_ENV=DEVELOPMENT& nodemon back/server",
-    "prod": "SET NODE_ENV=PRODUCTION& nodemon back/server"
+    "dev": "export NODE_ENV=DEVELOPMENT&& nodemon back/server",
+    "prod": "export NODE_ENV=PRODUCTION&& nodemon back/server"
   },
   "repository": {
     "type": "git",
@@ -19,9 +19,17 @@
   },
   "homepage": "https://github.com/micompa/3Dmarketplace#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.1",
+    "cloudinary": "^1.32.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^6.7.2"
+    "express-fileupload": "^1.4.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.2",
+    "nodemailer": "^6.8.0",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
